--- a/ToDoClient/ToDo.WPFClient/App.xaml
+++ b/ToDoClient/ToDo.WPFClient/App.xaml
@@ -2,13 +2,12 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" 
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" 
              xmlns:local="clr-namespace:ToDoClient" 
-             StartupUri="Views/MainWindow.xaml" 
+             StartupUri="View/MainWindow.xaml" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              d1p1:Ignorable="d" 
              xmlns:d1p1="http://schemas.openxmlformats.org/markup-compatibility/2006"
              DispatcherUnhandledException="Application_DispatcherUnhandledException">
-  <Application.Resources>
-
+    <Application.Resources>
         <ResourceDictionary>
             <vm:ViewModelLocator x:Key="Locator" d:IsDataSource="True" xmlns:vm="clr-namespace:ToDoClient.ViewModel" />
             <FontFamily x:Key="FontAwesome">/Assets/Fonts/fa-solid-900.ttf#Font Awesome 5 Free Solid</FontFamily>
