--- a/ToDoClient/ToDo.WPFClient/View/ListItemsPage.xaml
+++ b/ToDoClient/ToDo.WPFClient/View/ListItemsPage.xaml
@@ -1,22 +1,23 @@
-﻿<Window x:Class="ToDoClient.MainWindow"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:ToDoClient"
-        xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
-        mc:Ignorable="d"
-        DataContext="{Binding Main, Source={StaticResource Locator}}"
-        Title="LabCore - ToDo App" Height="450" Width="800">
-    <Window.Resources>
+﻿<Page x:Class="ToDoClient.View.ListItemsPage"
+      xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
+      xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+      xmlns:local="clr-namespace:ToDoClient.View"
+      xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
+      mc:Ignorable="d" 
+      d:DesignHeight="450" d:DesignWidth="800"
+      DataContext="{Binding ListItemsViewModel, Source={StaticResource Locator}}"
+      Title="ListItemsPage">
+    <i:Interaction.Triggers>
+        <i:EventTrigger EventName="Loaded">
+            <i:InvokeCommandAction Command="{Binding LoadMainPageCommand}"/>
+        </i:EventTrigger>
+    </i:Interaction.Triggers>
+    <Page.Resources>
         <BooleanToVisibilityConverter x:Key="BoolToVisibility" />
-    </Window.Resources>
+    </Page.Resources>
     <Grid>
-        <i:Interaction.Triggers>
-            <i:EventTrigger EventName="Loaded">
-                <i:InvokeCommandAction Command="{Binding LoadMainPageCommand}"/>
-            </i:EventTrigger>
-        </i:Interaction.Triggers>
         <Grid.RowDefinitions>
             <RowDefinition Height="40px"/>
             <RowDefinition Height="*"/>
@@ -33,8 +34,8 @@
                 </DataTemplate>
             </ListView.ItemTemplate>
         </ListView>
-        <Button Grid.Row="2" x:Name="AddTodoItem" Height="20" Width="120" Content="Add Item" HorizontalAlignment="Left" Margin="10,10,10,10"></Button>
+        <Button Grid.Row="2" x:Name="AddTodoItem" Command="{Binding LoadAddItemPage}" Height="20" Width="120" Content="New" HorizontalAlignment="Left" Margin="10,10,10,10"></Button>
         <Button Grid.Row="2" x:Name="DeleteTodoItem" Height="20" Width="120" Content="Delete Item" HorizontalAlignment="Left" Margin="272,10,0,10"></Button>
         <Button Grid.Row="2" x:Name="ModifyTodoItem" Height="20" Width="110" Content="Modify Item" HorizontalAlignment="Left" Margin="146,10,0,10" ></Button>
     </Grid>
-</Window>
+</Page>
