--- a/ToDoClient/ToDo.WPFClient/View/ListItemsPage.xaml
+++ b/ToDoClient/ToDo.WPFClient/View/ListItemsPage.xaml
@@ -24,7 +24,11 @@
             <RowDefinition Height="40px"/>
         </Grid.RowDefinitions>
         <Label Grid.Row="0" Margin="5" FontSize="14"  Content="List of ToDo things:"/>
-        <ListView  Grid.Row="1" BorderThickness="0" FontSize="14" Margin="20" ItemsSource="{Binding TodoItemsList}">
+        <ListView  Grid.Row="1" BorderThickness="0" FontSize="14" Margin="20" 
+                   x:Name="listItems"
+                   ItemsSource="{Binding TodoItemsList}"
+                   SelectionMode="Single"
+                   SelectedItem="{Binding Path=SelectedItem, Mode=TwoWay}">
             <ListView.ItemTemplate>
                 <DataTemplate>
                     <StackPanel Orientation="Horizontal">
@@ -34,8 +38,21 @@
                 </DataTemplate>
             </ListView.ItemTemplate>
         </ListView>
-        <Button Grid.Row="2" x:Name="AddTodoItem" Command="{Binding LoadAddItemPage}" Height="20" Width="120" Content="New" HorizontalAlignment="Left" Margin="10,10,10,10"></Button>
-        <Button Grid.Row="2" x:Name="DeleteTodoItem" Height="20" Width="120" Content="Delete Item" HorizontalAlignment="Left" Margin="272,10,0,10"></Button>
-        <Button Grid.Row="2" x:Name="ModifyTodoItem" Height="20" Width="110" Content="Modify Item" HorizontalAlignment="Left" Margin="146,10,0,10" ></Button>
+        <StackPanel Grid.Row="2" Orientation="Horizontal">
+            <Button x:Name="AddTodoItem" Command="{Binding LoadAddItemPage}" Height="20" Width="120" Content="New" HorizontalAlignment="Left" Margin="10"></Button>
+            <Button x:Name="DeleteTodoItem" Height="20" Width="120" Content="Delete" HorizontalAlignment="Left" Margin="10"
+                    Command="{Binding DeleteItemCommand}" >
+                <Button.Style>
+                    <Style TargetType="Button">
+                        <Style.Triggers>
+                            <DataTrigger Binding="{Binding SelectedItems.Count,ElementName=listItems}" Value="0">
+                                <Setter Property="IsEnabled" Value="False" />
+                            </DataTrigger>
+                        </Style.Triggers>
+                    </Style>
+                </Button.Style>
+            </Button>
+            <Button x:Name="ModifyTodoItem" Height="20" Width="120" Content="Modify Item" HorizontalAlignment="Left" Margin="10" ></Button>
+        </StackPanel>
     </Grid>
 </Page>
