--- a/ToDoClient/ToDo.WPFClient/View/ListItemsPage.xaml
+++ b/ToDoClient/ToDo.WPFClient/View/ListItemsPage.xaml
@@ -23,12 +23,17 @@
             <RowDefinition Height="*"/>
             <RowDefinition Height="40px"/>
         </Grid.RowDefinitions>
-        <Label Grid.Row="0" Margin="5" FontSize="14"  Content="List of ToDo things:"/>
-        <ListView  Grid.Row="1" BorderThickness="0" FontSize="14" Margin="20" 
+        <Label Grid.Row="0" Margin="5" FontSize="14"  Content="List of ToDo things" Background="LightBlue"/>
+        <ListView  Grid.Row="1" BorderThickness="1" FontSize="14" Margin="10" 
                    x:Name="listItems"
                    ItemsSource="{Binding TodoItemsList}"
                    SelectionMode="Single"
                    SelectedItem="{Binding Path=SelectedItem, Mode=TwoWay}">
+            <ListView.ItemContainerStyle>
+                <Style TargetType="{x:Type ListViewItem}">
+                    <Setter Property="Height" Value="40" />
+                </Style>
+            </ListView.ItemContainerStyle>
             <ListView.ItemTemplate>
                 <DataTemplate>
                     <StackPanel Orientation="Horizontal">
